[tool.poetry]
name = "ccacb"
version = "0.2.0"
description = "Watches the clipboard for youtube urls and downloads them"
authors = ["Chris Allison <chris.charles.allison+ccacb@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
